# Algorithms_and_Data_structures_ITMO_2020

./: .gitignore  CMakeLists.txt  README.md
docs/: Алгоритмы и структуры данных - Алгоритм Беллмана Форда.pages  Алгоритмы и структуры данных - Алгоритм Краскала.pages  Алгоритмы и структуры данных - задачи (1-5) (4 divide and conquer).pages  Алгоритмы и структуры данных - задачи (1-5).pages  Алгоритмы и структуры данных - задачи 2 (1-5) (2 string reconstruction order).pages  Алгоритмы и структуры данных - задачи 2 (1-5).pages  Алгоритмы и структуры данных - задачи 3 (1-5).pages  Алгоритмы и структуры данных - задачи 4 (1-5).pages
docs/Алгоритмы и структуры данных - задачи 2 (1-5).pages/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
tasks/: common_utils_collections.c  common_utils_string.c
tasks/common/: bunch_of_stones_1005.c  duons_1155.c  hyperjump_1296.c  wall_on_wall_2025.c
tasks/common_1/: bunch_of_stones_1005.c  duons_1155.c  hyperjump_1296.c  hyperjump_1296_dnc.c  players_1401.c  wall_on_wall_2025.c
tasks/common_2/: feed_elepophant_1444.cpp  land_of_fools_1604.cpp  median_of_surface_1207.cpp  spy_1322.cpp  the_one_who_visits_1726.cpp
tasks/common_3/: billionares_1650.cpp  disk_tree_1067.cpp  millitary_training_1521.cpp  mono_pool_1494.cpp  white_stripes_1628.cpp
tasks/common_4/: currency_exchange_1162.cpp  map_coloring_1080.cpp  mobile_telegraphs_1806.cpp  network_1160.cpp  russian_pipelines_1450.cpp
tasks/extra/: fenwick_tree.cpp
utils/: common_utils_collections.c
